syntax = "proto3";

package axion.codegen.v1;

import "buf/validate/validate.proto";
import "common/common.proto";
import "common/errors.proto";
import "google/protobuf/timestamp.proto";

enum BlueprintType {
  BLUEPRINT_TYPE_UNSPECIFIED = 0;
  BLUEPRINT_TYPE_SERVICE = 1;
  BLUEPRINT_TYPE_DATABASE = 2;
  BLUEPRINT_TYPE_QUEUE = 3;
  BLUEPRINT_TYPE_CACHE = 4;
}

enum TemplateLanguage {
  TEMPLATE_LANGUAGE_UNSPECIFIED = 0;
  TEMPLATE_LANGUAGE_TYPESCRIPT = 1;
  TEMPLATE_LANGUAGE_PYTHON = 2;
  TEMPLATE_LANGUAGE_GO = 3;
  TEMPLATE_LANGUAGE_RUST = 4;
}

message Blueprint {
  string id = 1;
  string name = 2;
  string description = 3;
  BlueprintType type = 4;
  string version = 5;
  map<string, string> config_schema = 6;
  repeated string tags = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message Template {
  string id = 1;
  string blueprint_id = 2;
  string name = 3;
  TemplateLanguage language = 4;
  string content = 5;
  map<string, string> metadata = 6;
}

message GetBlueprintRequest {
  axion.common.v1.RequestMetadata metadata = 1 [(buf.validate.field).required = true];
  string blueprint_id = 2 [(buf.validate.field).string.uuid = true];
}

message GetBlueprintResponse {
  oneof result {
    Blueprint blueprint = 1;
    axion.common.v1.Error error = 2;
  }
}

message ListBlueprintsRequest {
  axion.common.v1.RequestMetadata metadata = 1 [(buf.validate.field).required = true];
  BlueprintType type = 2;
  axion.common.v1.Pagination pagination = 3;
}

message ListBlueprintsResponse {
  oneof result {
    BlueprintList blueprints = 1;
    axion.common.v1.Error error = 2;
  }
}

message BlueprintList {
  repeated Blueprint blueprints = 1;
  axion.common.v1.Pagination pagination = 2;
}

message GenerateCodeRequest {
  axion.common.v1.RequestMetadata metadata = 1 [(buf.validate.field).required = true];
  
  string project_id = 2 [(buf.validate.field).string.uuid = true];
  
  string blueprint_id = 3 [(buf.validate.field).string.uuid = true];
  
  map<string, string> config = 4;
  
  TemplateLanguage language = 5;
}

message GenerateCodeResponse {
  oneof result {
    GeneratedCode code = 1;
    axion.common.v1.Error error = 2;
  }
}

message GeneratedCode {
  string service_name = 1;
  repeated CodeFile files = 2;
  map<string, string> metadata = 3;
}

message CodeFile {
  string path = 1;
  string content = 2;
  string language = 3;
}

